<resources>
    <string name="app_name">Submission2</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="change_langunage_settings">translate</string>
    <string name="navigation_movies">Movies</string>
    <string name="movies_title">Title</string>
    <string name="movies_photo">Photo</string>
    <string name="movies_genre">Genre</string>
    <string name="movies_director">Director</string>
    <string name="movies_year">Year</string>
    <string name="movies_runtime">Runtime</string>
    <string name="movies_synopsi">Synopsi :</string>
    <string-array name="data_movie_photo">
        <item>@drawable/movie_a_start_is_born</item>
        <item>@drawable/movie_alita</item>
        <item>@drawable/movie_aquaman</item>
        <item>@drawable/movie_infinity_war</item>
        <item>@drawable/movie_bohemian</item>
        <item>@drawable/movie_creed</item>
        <item>@drawable/movie_glass</item>
        <item>@drawable/movie_overlord</item>
        <item>@drawable/movie_ralph</item>
        <item>@drawable/movie_spiderman</item>
    </string-array>
    <string-array name="data_movie_title">
        <item>A Star is Born</item>
        <item>Alita Battle Angel</item>
        <item>Aquaman</item>
        <item>Avengers Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Creed II</item>
        <item>Glass</item>
        <item>Overlord</item>
        <item>Ralph Breaks the Internet</item>
        <item>Spiderman Into the Spider Verse</item>
    </string-array>
    <string-array name="data_movie_genre">
        <item>Drama, Romance, Music</item>
        <item>Action, Thriller, Adventure</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Music</item>
        <item>Drama</item>
        <item>Thriller, Drama</item>
        <item>Horror, War</item>
        <item>Family, Animation, Comedy</item>
        <item>Action, Adventure, Animation</item>
    </string-array>
    <string-array name="data_movie_director">
        <item>Bradley Cooper</item>
        <item>Robert Rodiguez</item>
        <item>James Wan</item>
        <item>Joe Russo</item>
        <item>Byan Singer</item>
        <item>Steveb Caple Jr</item>
        <item>M. Night Shyamalan</item>
        <item>Julius Avery</item>
        <item>Phil Johnston</item>
        <item>Bob Persichetti</item>
    </string-array>
    <string-array name="data_movie_year">
        <item>2018</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="data_movie_runtime">
        <item>135 Min</item>
        <item>122 Min</item>
        <item>144 Min</item>
        <item>149 Min</item>
        <item>135 Min</item>
        <item>130 Min</item>
        <item>129 Min</item>
        <item>110 Min</item>
        <item>112 Min</item>
        <item>117 Min</item>
    </string-array>
    <string-array name="data_movie_synopsi">
        <item>Seasoned musician Jackson Maine discovers and falls in love with struggling artist Ally. She has just about given up on her dream to make it big as a singer until Jack coaxes her into the spotlight.
            But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido,
            a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm.
            With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half human, half Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows Thanos.
            A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970.
            Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet finding a way to keep the band together amid the success and excess.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb,
            a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>France, June 1944. On the eve of D Day, some American paratroopers fall behind enemy lines after their aircraft crashes while on a mission to destroy a radio tower in a small village near the beaches of Normandy.
            After reaching their target, the surviving paratroopers realise that, in addition to fighting the Nazi troops that patrol the village, they also must fight against something else.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellopes video game, Sugar Rush.
            In way over their heads, Ralph and Vanellope rely on the citizens of the internet the netizens to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend making site BuzzzTube.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spiderman.
            When Wilson Kingpin Fisk uses a super collider,
            others from across the Spider Verse are transported to this dimension.</item>
    </string-array>
    <string name="navigation_tv_show">Tv Show</string>
    <string name="tv_show_title">Title</string>
    <string name="tv_show_photo">Photo</string>
    <string name="tv_show_genre">Genre</string>
    <string name="tv_show_runtime">Runtime</string>
    <string name="tv_show_creator">Creator</string>
    <string name="tv_show_year">Year</string>
    <string name="tv_show_synopsi">Synopsi</string>
    <string-array name="data_tv_show_photo">
        <item>@drawable/tv_arrow</item>
        <item>@drawable/tv_flash</item>
        <item>@drawable/tv_god</item>
        <item>@drawable/tv_gotham</item>
        <item>@drawable/tv_hanna</item>
        <item>@drawable/tv_naruto_shipudden</item>
        <item>@drawable/tv_ncis</item>
        <item>@drawable/tv_supergirl</item>
        <item>@drawable/tv_supernatural</item>
        <item>@drawable/tv_the_simpson</item>
    </string-array>
    <string-array name="data_tv_show_title">
        <item>Arrow</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Hanna</item>
        <item>Naruto Shippuden</item>
        <item>NCIS</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpsons</item>
    </string-array>
    <string-array name="data_tv_show_genre">
        <item>Crime, Drama, Mystery</item>
        <item>Drama, SCI-FI</item>
        <item>SCI-FI, Drama, Action</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Action, Adventure, Drama</item>
        <item>Animation, Comedy, Drama</item>
        <item>Action, Crime, Drama</item>
        <item>Action, Drama, Adventure</item>
        <item>Drama, Mystery</item>
        <item>Animation, Comedy</item>
    </string-array>
    <string-array name="data_tv_show_runtime">
        <item>42 Min</item>
        <item>44 Min</item>
        <item>60 Min</item>
        <item>43 Min</item>
        <item>50 Min</item>
        <item>22 Min</item>
        <item>45 Min</item>
        <item>42 Min</item>
        <item>45 Min</item>
        <item>22 Min</item>
    </string-array>
    <string-array name="data_tv_show_creator">
        <item>Greg Berlanti</item>
        <item>Geoff Johns</item>
        <item>David Benioff</item>
        <item>Bruno Heller</item>
        <item>David Farr</item>
        <item>Masashi Kishimoto</item>
        <item>Don McGill</item>
        <item>Greg Berlanti</item>
        <item>Eric Kripke</item>
        <item>Matt Greoning</item>
    </string-array>
    <string-array name="data_tv_show_year">
        <item>2012</item>
        <item>2014</item>
        <item>2011</item>
        <item>2014</item>
        <item>2019</item>
        <item>2007</item>
        <item>2003</item>
        <item>2015</item>
        <item>2005</item>
        <item>1989</item>
    </string-array>
</resources>